--- a/lib/web/mage/gallery/gallery.html
+++ b/lib/web/mage/gallery/gallery.html
@@ -25,14 +25,14 @@
         <div class="fotorama__nav-wrap" data-gallery-role="nav-wrap">
             <div class="fotorama__nav fotorama__nav--thumbs">
                 <div class="fotorama__fullscreen-icon" data-gallery-role="fotorama__fullscreen-icon" tabindex="0" aria-label="Exit fullscreen" role="button"></div>
-                <div class="fotorama__thumb__arr--left" role="button" aria-label="Previos" data-gallery-role="arrow">
-                    <div class="fotorama__thumb__arr"></div>
+                <div class="fotorama__thumb__arr fotorama__thumb__arr--left" role="button" aria-label="Previos" data-gallery-role="arrow">
+                    <div class="fotorama__thumb--icon"></div>
                 </div>
                 <div class="fotorama__nav__shaft">
                     <div class="fotorama__thumb-border"></div>
                 </div>
-                <div class="fotorama__thumb__arr--right" role="button" aria-label="Next" data-gallery-role="arrow">
-                    <div class="fotorama__thumb__arr"></div>
+                <div class="fotorama__thumb__arr fotorama__thumb__arr--right" role="button" aria-label="Next" data-gallery-role="arrow">
+                    <div class="fotorama__thumb--icon"></div>
                 </div>
             </div>
         </div>
